--- a/engines/common/nucleus/scss/nucleus/_core.scss
+++ b/engines/common/nucleus/scss/nucleus/_core.scss
@@ -19,7 +19,7 @@ body {
 }
 
 #g-page-surround {
-	height: 100vh;
+	height: 100%;
 }
 
 article,
