--- a/engines/common/nucleus/scss/nucleus/_offcanvas.scss
+++ b/engines/common/nucleus/scss/nucleus/_offcanvas.scss
@@ -35,7 +35,7 @@
         z-index: 5;
         position: fixed;
         opacity: 1;
-        height: 100vh;
+        height: 100%;
     }
     
     #g-offcanvas {
